looks like shit

--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
             <section class="section-about" id="section-about">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
-                        I design and build websites and applications.
+                        About Me
                     </h2>
                 </div>
 
                 <div class="row">
                     <div class="col-1-of-2">
-                        <h3 class="heading-tertiary u-margin-bottom-small">About Me</h3>
                         <p class="paragraph">
                             My name is James and I love building websites and web applications that combine fresh and clean aesthetics with fluid and intuitive user interfaces. I have multiple years of experience in coding with HTML, CSS and Javascript as well as more advanced frameworks including (but not limited to) Sass/SCSS, Node, Express and React. This experience include attending an intensive 6 month fullstack web development training program at UCLA extension and working as a web development intern at Wilshire Financial Network. I am also constantly trying to learn more and add to my skill set as a developer.
 
@@ -177,8 +176,8 @@
                 
 
                 <div class="feature-nav row">
-                    <a href="#section-connect" class="btn-text btn-text--grey">Get in touch &darr;</a>
-                    <a href="https://github.com/JamesBaine" class="btn-text btn-text--grey btn-text--grey--repo">Visit my GitHub &rarr;</a>
+                    <a href="#section-connect" class="btn-text">Get in touch &darr;</a>
+                    <a href="https://github.com/JamesBaine" class="btn-text btn-text--grey--repo">Visit my GitHub &rarr;</a>
                 </div>
 
                 
