--- a/index.html
+++ b/index.html
@@ -38,18 +38,27 @@
         <header id="section-header" class="header">
             <div class="header__logo-box">
                     
-                <svg class="header__logo" width="40" height="50">
-                    <polyline fill="none"  stroke-width="3"
-                        points=
-                            "8,4
-                            32,4
-                            24,12
-                            32,16
-                            20,36
-                            8,16
-                            16,12"
-                    />
-                </svg>
+                <div class="header__logo">
+                    <div class="header__logo__name">
+                        <p class="header__logo__name__box header__logo__name__box-top">
+                            James
+                        </p>
+                        <p class="header__logo__name__box header__logo__name__box-bottom">
+                            Baine
+                        </p>
+                    </div>
+                    <div class="header__logo__title">
+                        <p>
+                            Web Developer
+                        </p>
+                        <p>
+                            +
+                        </p>
+                        <p>
+                            UX Designer
+                        </p>
+                    </div>
+                </div>
                         
             </div>
 
