started changing nav button

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
     </head>
 
     <body>
-        <div class="navigation">
-            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+        <div class="navburger">
+            <input type="checkbox" class="navburger__checkbox" id="navi-toggle">
 
-            <label for="navi-toggle" class="navigation__button">
-                <span class="navigation__icon">&nbsp;</span>
+            <label for="navi-toggle" class="navburger__button">
+                <span class="navburger__icon">&nbsp;</span>
             </label>
 
-            <div class="navigation__background">&nbsp;</div>
+            <div class="navburger__background">&nbsp;</div>
 
-            <nav class="navigation__nav">
-                <ul class="navigation__list">
-                    <li class="navigation__item"><a href="#section-about" class="navigation__link" onclick="hideNav()">About Me</a></li>
-                    <li class="navigation__item"><a href="#section-features" class="navigation__link" onclick="hideNav()">My Work</a></li>
-                    <li class="navigation__item"><a href="mailto:jamesmbaine@gmail.com" target="_top" class="navigation__link" onclick="hideNav()">Contact Me</a></li>
-                    <li class="navigation__item"><a href="#section-connect" class="navigation__link" onclick="hideNav()">Connect with me</a></li>
+            <nav class="navburger__nav">
+                <ul class="navburger__list">
+                    <li class="navburger__item"><a href="#section-about" class="navburger__link" onclick="hideNav()">About Me</a></li>
+                    <li class="navburger__item"><a href="#section-features" class="navburger__link" onclick="hideNav()">My Work</a></li>
+                    <li class="navburger__item"><a href="mailto:jamesmbaine@gmail.com" target="_top" class="navburger__link" onclick="hideNav()">Contact Me</a></li>
+                    <li class="navburger__item"><a href="#section-connect" class="navburger__link" onclick="hideNav()">Connect with me</a></li>
                     </ul>
             </nav>
         </div>
