desktop nav changed

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
     </head>
 
     <body>
+
+        <div class="main-nav">
+            <nav class="main-nav__nav">
+                <ul class="main-nav__list">
+                        <li class="main-nav__item"><a href="#section-header" class="main-nav__link" >home</a></li>
+                        <li class="main-nav__item"><a href="#section-about" class="main-nav__link" >about</a></li>
+                        <li class="main-nav__item"><a href="#section-features" class="main-nav__link" >work</a></li>
+                        <li class="main-nav__item"><a href="mailto:jamesmbaine@gmail.com" target="_top" class="main-nav__link" >contact</a></li>
+                        
+                </ul>
+            </nav>
+        </div>
+
         <div class="navburger">
             <input type="checkbox" class="navburger__checkbox" id="navi-toggle">
 
