footer svg icons added

--- a/index.html
+++ b/index.html
@@ -252,20 +252,25 @@
         <footer class="footer" id="section-connect">
 
             <div class="row">
-                <div class="col-1-of-2">
                     <div class="footer__navigation">
                         <ul class="footer__list">
-                            <li class="footer__item"><a href="mailto:jamesmbaine@gmail.com" target="_top" class="footer__link">Email</a></li>
-                            <li class="footer__item"><a href="https://www.linkedin.com/in/james-baine" class="footer__link">LinkedIn</a></li>
-                            <li class="footer__item"><a href="https://github.com/JamesBaine" class="footer__link">GitHub</a></li>                    
+                            <li class="footer__item"><a href="mailto:jamesmbaine@gmail.com" target="_top" class="footer__link">
+                                <svg class="footer__icon">
+                                    <use xlink:href="img/sprite.svg#icon-envelop"></use>
+                                </svg>
+                            </a></li>
+                            <li class="footer__item"><a href="https://www.linkedin.com/in/james-baine" class="footer__link">
+                                <svg class="footer__icon">
+                                    <use xlink:href="img/sprite.svg#icon-linkedin2"></use>
+                                </svg>
+                            </a></li>
+                            <li class="footer__item"><a href="https://github.com/JamesBaine" class="footer__link">
+                                <svg class="footer__icon">
+                                    <use xlink:href="img/sprite.svg#icon-github"></use>
+                                </svg>
+                            </a></li>                    
                         </ul>
                     </div>
-                </div>
-                <div class="col-1-of-2">
-                    <P class="footer__copyright">
-                            
-                    </p>
-                </div>
             </div>
         </footer>
 
