header phone response

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary--main">My name is James and I design and build <span class="heading-primary--accent">websites</span> and <span class="heading-primary--accent">applications</span>.</span>
+                    <span class="heading-primary--main">My name is James and I build <span class="heading-primary--accent">websites</span> and <span class="heading-primary--accent">applications</span>.</span>
                 </h1>
             </div>
         </header>
