--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary--main">My name is James and I build <span class="heading-primary--accent">websites</span> and <span class="heading-primary--accent">applications</span>.</span>
+                    <span class="heading-primary--main">My name is James and I build <span class="heading-primary--sub">websites and applications</span>
                 </h1>
             </div>
         </header>
@@ -208,7 +208,7 @@
 
             <section class="section-tech">
                 <div class="u-center-text u-margin-bottom-big">
-                        <h2 class="heading-secondary">Technologies and tools I use</h2>
+                        <h2 class="heading-secondary">Technical Expertise</h2>
                 </div>
                 <div class="tech-icons u-center-text">
                         <img class="tech-icon" src="img/icons/html5.svg" alt="HTML5" title="HTML5">
