header content, logo changed back

--- a/index.html
+++ b/index.html
@@ -50,8 +50,21 @@
 
         <header id="section-header" class="header">
             <div class="header__logo-box">
+
+                    <svg class="header__logo" width="40" height="50">
+                            <polyline fill="none"  stroke-width="3"
+                                points=
+                                    "8,4
+                                    32,4
+                                    24,12
+                                    32,16
+                                    20,36
+                                    8,16
+                                    16,12"
+                            />
+                        </svg>
                     
-                <div class="header__logo">
+                <!-- <div class="header__logo">
                     <div class="header__logo__name">
                         <p class="header__logo__name__box header__logo__name__box-top">
                             James
@@ -71,13 +84,13 @@
                             UX Designer
                         </p>
                     </div>
-                </div>
+                </div> -->
                         
             </div>
 
             <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary--main">My name is James and I build <span class="heading-primary--sub">websites and applications</span>
+                    <span class="heading-primary--main">James Baine<span class="heading-primary--sub">Front End Web Development</span>
                 </h1>
             </div>
         </header>
