header, feature bg color and img changed, header nav icon arrow added

--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
                 <h1 class="heading-primary">
                     <span class="heading-primary--main">James Baine<span class="heading-primary--sub">Front End Web Development</span>
                 </h1>
+                <a class="scroll-btn scroll-btn--head" href="#section-about">
+                    <svg class="scroll-btn__icon">
+                        <use xlink:href="img/sprite.svg#icon-chevron-thin-down"></use>
+                    </svg>
+                </a>
             </div>
+            
         </header>
 
         <main>
