--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <li class="main-nav__item"><a href="#section-header" class="main-nav__link" >home</a></li>
                         <li class="main-nav__item"><a href="#section-about" class="main-nav__link" >about</a></li>
                         <li class="main-nav__item"><a href="#section-features" class="main-nav__link" >work</a></li>
-                        <li class="main-nav__item"><a href="mailto:jamesmbaine@gmail.com" target="_top" class="main-nav__link" >contact</a></li>
+                        <li class="main-nav__item"><a href="#section-connect" target="_top" class="main-nav__link" >contact</a></li>
                         
                 </ul>
             </nav>
